--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hm-4_movies",
+  "name": "git_movies-search-01",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://goodluckTony.github.io/git_movies-search-01",
